Added a new UI component
- Added an Input component
- Added a new color variant for the button
- Added margin and padding reset on index.css

--- a/src/components/UI/button.css
+++ b/src/components/UI/button.css
@@ -13,3 +13,8 @@
     background-color: #2274a5;
     color: #ffffff;
 }
+
+.button.secondary {
+    background-color: #d6e3f8;
+    color: black;
+}
