Added routing to the different pages in the app

--- a/src/App.css
+++ b/src/App.css
@@ -9,31 +9,22 @@ main {
     color: #ffffff;
 }
 
-.App-logo {
-    height: 20vmin;
-    pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-    .App-logo {
-        animation: App-logo-spin infinite 20s linear;
-    }
-}
-
 .App-header {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    justify-content: center;
-    font-size: calc(10px + 2vmin);
-    color: white;
+    font-size: calc(10px + 1vmin);
 }
 
-@keyframes App-logo-spin {
-    from {
-        transform: rotate(0deg);
-    }
-    to {
-        transform: rotate(360deg);
-    }
+.App-header nav {
+    display: flex;
+    justify-content: center;
+}
+
+.App-header nav a {
+    color: #b9b8b8;
+}
+.App-header nav a.active {
+    color: #ffffff;
+}
+.App-header nav {
+    display: flex;
+    gap: 10px;
 }
